Order Database finished, untested code